8224865: Replace wildcard address with loopback or local host in tests - part 13
Fixes intermittent failures observed in some network tests

Reviewed-by: chegar